@@ -720,12 +720,12 @@ LocalDatabase::open(Context *context, PBtreeHeader *btree_header)
 
   /* load the custom compare function? */
   if (m_config.key_type == UPS_TYPE_CUSTOM) {
-    ups_compare_func_t func = CallbackManager::get(m_btree_index->compare_hash());
-    if (func == 0) {
+    ups_compare_func_t f = CallbackManager::get(m_btree_index->compare_hash());
+    if (f == 0 && notset(get_flags(), UPS_IGNORE_MISSING_CALLBACK)) {
       ups_trace(("custom compare function is not yet registered"));
       return (UPS_NOT_READY);
     }
-    set_compare_func(func);
+    set_compare_func(f);
   }
 
   /* is record compression enabled? */
