@@ -2,6 +2,7 @@ Feb 26 2016 - chris ---------------------------------------------------
 o Removed UPS_PARTIAL and all related functionality
 o Removed UPS_FLUSH_TXN_IMMEDIATELY - it was deprecated and not used
 o UPS_DIRECT_ACCESS is now deprecated and only used internally
+o ups_info, ups_dump and ups_export now work for UPS_TYPE_CUSTOM databases
 
 Feb 25 2016 - chris ---------------------------------------------------
 o Added ups_at_exit cleanup function to release statically allocated
